# NDKGifDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wangxingxing/ndkgifdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GifJni.cpp  GifPlayer.cpp  GifPlayer.h  PthreadSleep.cpp  PthreadSleep.h  SyncTime.cpp  SyncTime.h  log.h
app/src/main/java/com/wangxingxing/ndkgifdemo/: GifPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangxingxing/ndkgifdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
